<resources>
    <string name="app_name">SubjectReview</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject_edit_text">科目編集</string>
    <string name="subject_text">科目名</string>
    <string name="save_text">保存</string>
    <string name="delete_text">削除</string>
    <string name="year_text">受講年</string>
    <string name="teacher_name">担当教員名</string>
    <string name="point_text">授業評価(1～5)</string>
    <string name="detail_text">評価の詳細</string>
    <string name="edit_button">編集</string>
    <string name="subject_list_text">科目一覧</string>
    <string name="review_list_text">評価一覧</string>
    <string name="review_edit_text">レビュー編集画面</string>
    <string name="review_detail_text">レビュー詳細画面</string>
</resources>